--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,3 +1,7 @@
+{{ $posts := (where .Site.RegularPages "Section" "==" "blog") }}
+{{ $postCount := len $posts }}
+
+{{if $postCount}}
 <section class="blog-partial">
   <div class="container">
     <h2 class="title-section">
@@ -44,3 +48,4 @@
     </div>
   </div>
 </section>
+{{ end }}
