--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -13,7 +13,7 @@
     <label for="menu-controller" onclick></label>
 
     <div class="logo logo-{{ .Site.LanguageCode  | lower }}">
-      <a href="/{{ .Site.LanguagePrefix }}"><img src="/uploads/images/youbet.svg" alt="YouBet!" /></a>
+      <a href="/"><img src="/uploads/images/youbet.svg" alt="YouBet!" /></a>
     </div>
 
     {{ if .Site.Menus.main }}
@@ -53,18 +53,5 @@
     {{ end }}
   </div>
 
-  <!-- {{ if .IsTranslated }}
-    <nav class="languages-nav">
-      <div class="languages-navlinks">
-        {{ range .Translations }}
-          <li>
-            <a href="{{ .RelPermalink }}"
-              >{{ .Language.LanguageName }} {{ if .IsPage }}({{ i18n "wordCount" . }}){{ end }}</a
-            >
-          </li>
-        {{ end }}
-      </div>
-    </nav>
-  {{ end }}
-   -->
+
 </div>
