feat: update seo configs

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,10 @@
 
 
 <body class="theme-dark">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.googleTag }}" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <input type="checkbox" id="menu-controller" class="menu-controller" hidden />
 
   {{ partial "header.html" . }}
