--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -17,5 +17,6 @@
   {{ block "head/stylesheet" . }}{{ partial "head/stylesheet.html" . }}{{ end }}
   {{ block "head/favicons" . }}{{ partial "head/favicons.html" . }}{{ end }}
   {{ block "head/scripts-head" . }}{{ partial "head/scripts-head.html" . }}{{ end }}
+  {{ block "head/google-tag-manager" . }}{{ partial "head/google-tag-manager.html" . }}{{ end }}
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="8d237d43-abcf-4cb9-ba8b-04b02ba23256" data-blockingmode="auto" type="text/javascript"></script>
 </head>
