feat: update styles

--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -193,11 +193,13 @@ section {
 /*
  * Add the correct display in all browsers.
  */
+
 summary {
   position: relative;
 
   display: block;
 
+  font-size: f.to-rem(18px);
   list-style-type: none;
 
   cursor: pointer;
@@ -206,37 +208,8 @@ summary {
     display: none;
   }
 
-  &:focus {
-    position: relative;
-
-    outline: 0;
-
-    &::after {
-      @include my.focused;
-
-      position: absolute;
-      top: my.$gutter * -0.5;
-      right: my.$gutter * -0.5;
-      bottom: my.$gutter * -0.5;
-      left: my.$gutter * -0.5;
-
-      width: auto;
-      height: auto;
-
-      pointer-events: none;
-      content: '';
-    }
-  }
-
-  &:hover,
-  &:focus {
-    &::before {
-      @include my.triangle('bottom', my.palette('black'), 0.25em);
-    }
-  }
-
   &::before {
-    @include my.triangle('left', my.palette('neutral', 'base'), 0.25em);
+    @include my.triangle('left', my.palette('gray', 'base'), 0.25em);
 
     position: absolute;
     top: my.$leading * 0.5em;
@@ -245,17 +218,26 @@ summary {
     content: '';
   }
 
-  details[open] > &::before {
-    @include my.triangle('bottom', my.palette('neutral', 'base'), 0.25em);
-
-    content: '';
+  &:hover {
+    color: my.palette('blue', 'base');
   }
 
-  details[open] > &:hover,
-  details[open] > &:focus {
-    &::before {
-      @include my.triangle('left', my.palette('black'), 0.25em);
-    }
+  &:focus {
+    position: relative;
+
+    color: my.palette('blue', '80%');
+
+    outline: none;
+  }
+
+  p {
+    margin-top: f.to-rem(16px);
+  }
+
+  details[open] > &::before {
+    @include my.triangle('bottom', my.palette('gray', 'base'), 0.25em);
+
+    content: '';
   }
 
   details > & ~ * {
@@ -281,6 +263,10 @@ summary {
         opacity: 1;
       }
     }
+  }
+
+  &:focus details {
+    border-color: my.palette('orange');
   }
 }
 
