--- a/assets/stylesheets/abstracts/_mixins.scss
+++ b/assets/stylesheets/abstracts/_mixins.scss
@@ -1057,3 +1057,44 @@
   width: $size;
   height: $size;
 }
+
+/// Textures Mixin
+/// @access public
+/// @author Magnus http://magnus-g.github.io/texture-mixin/
+/// @group mixins
+/// @todo Customize it to match your design needs or use one of the already available
+
+/// @example @include texture(green, 34, 0);  color, texture-number, 0=inverted or 1=normal
+// Color of the background. This will be seen through the texture since the latter is converted to levels of alpha.
+// Texture number. This number corresponds to the line-number in the mixin file.
+// Inverted or not. Setting this to 0 will make the mixin use the normal version of the texture. Setting it to 1 will make it use an inverted version.
+
+@mixin texture($bg-color, $texture-number, $inverted) {
+  $texture-list: 'paper.png' // Fabric and paper
+    'rice_paper.png' 'noise_lines.png' 'fabric_plaid.png' 'first_aid_kit.png' 'texturetastic_gray.png' 'lil_fiber.png'
+    'tex2res5.png' 'skin_side_up.png' 'light_noise_diagonal.png' 'chruch.png' '45degreee_fabric.png' 'bgnoise_lg.png'
+    'little_pluses.png' 'squairy_light.png' 'white_texture.png' 'binding_light.png' 'double_lined.png'
+    // Grid, mesh and squares
+    'grid.png' 'absurdidad.png' 'grid_noise.png' 'fancy_deboss.png' 'graphy.png' 'noise_pattern_with_crosslines.png'
+    'old_mathematics.png' 'ps_neutral.png' 'subtle_freckles.png' 'wavegrid.png' 'az_subtle.png' 'tiny_grid.png'
+    'wavegrid.png' 'gridme.png' 'noisy_grid.png' 'subtlenet2.png' 'white_carbon.png' 'lghtmesh.png' 'p5.png' // Dots
+    'worn_dots.png' 'subtle_dots.png' 'brillant.png' 'farmer.png' 'retina_dust.png' // Lines
+    'pinstripe.png' 'line_horizontal1.png' 'line_horizontal2.png' 'linen.png' 'vintage_speckles.png'
+    // Patina and irregular
+    'subtle_grunge.png' 'old_wall.png' 'brushed.png' 'stucco.png' 'mooning.png' 'husk.png'
+    '/uploads/images/textures/concrete_wall.png' 'noisy.png' 'concrete_wall_3.png' 'subtle_surface.png' 'dust.png'
+    'light_alu.png' 'corrugation.png' 'kindajean.png' // Diagonal
+    'line_diagonal1.png' 'line_diagonal2.png' 'groovepaper.png' 'brushed_alu.png' 'rough_diagonal.png'
+    'diagonal-noise.png' 'cross_scratches.png' 'striped_lens.png' 'debut_light.png' 'diagonal_waves.png' // Special
+    'honey_im_subtle.png' 'pw_maze_white.png' 'subtle_zebra_3d.png' 'white_wave.png' 'circles.png' 'crosses.png'
+    'grilled.png' 'pw_pattern.png' 'struckaxiom.png' 'vichy.png' 'wavecut.png' 'whitey.png' 'cream_pixels.png'
+    'grey.png' 'shinedotted.png' 'stacked_circles.png' 'noisy_grid_simple.png';
+
+  @if ($inverted == 1) {
+    background: url('https://raw.github.com/Magnus-G/texture-mixin/gh-pages/textures/inverted/#{nth($texture-list, $texture-number)}');
+    background-color: $bg-color;
+  } @else {
+    background: url('https://raw.github.com/Magnus-G/texture-mixin/gh-pages/textures/#{nth($texture-list, $texture-number)}');
+    background-color: $bg-color;
+  }
+}
