--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -165,14 +165,6 @@ dt a {
   }
 }
 
-details {
-  margin-bottom: my.$gutter * 2;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
 p {
   padding: 0;
   margin: 0;
@@ -182,7 +174,7 @@ p {
  * @see: http://demosthenes.info/blog/946/Controlling-Widows--Orphans
  */
 article p {
-  max-width: map.get(my.$line-lengths, 'max');
+  // max-width: map.get(my.$line-lengths, 'max');
 
   orphans: 3;
   widows: 3;
@@ -526,6 +518,14 @@ blockquote.verse p {
     display: block;
 
     margin: auto;
+  }
+
+  a:not([class]) {
+    text-decoration: underline;
+
+    &:hover {
+      color: my.palette('orange');
+    }
   }
 
   .image-topics {
