--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -9,23 +9,9 @@
 
             {{ range (.Paginate ( first 50 .Pages.ByDate.Reverse )).Pages }}
             <article class="post">
-              {{ if .Params.video }}
-              <div class="embed-container">
-                <iframe width="560" height="315" src="{{ .Params.video }}?controls=0?rel=0" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen>
-                </iframe>
-              </div>
-              {{ else }}
-              {{ if .Params.image }}
-              <div class="post__image">
-                <a href="/blog/{{ .Params.slug }}">
-                  <img src="{{ .Params.image }}" alt="{{ .Params.imageAlt }}" />
-                </a>
-              </div>
-              {{ end }}
-              {{ end }}
+              {{ partial "breadcrumbs.html" . }}
+
+              {{ partial "blog/default-image.html" . }}
 
               <div class="post__header">
                 <div class="post-title">
