--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,8 @@
     {{ partial "benefits.html" . }}
     <!-- {{ partial "destinations.html" . }}
     <!-- {{ partial "testimonials.html" . }} -->
+    {{ partial "partners.html" . }}
+    {{ partial "programs.html" . }}
     {{ partial "high-school.html" . }}
     {{ partial "blog.html" . }}
   </main>
