--- a/layouts/partials/programs.html
+++ b/layouts/partials/programs.html
@@ -8,19 +8,10 @@
 
       <div class="four-columns justify-content--center">
         {{ range .Params.programs }}
-
-
         {{ range where $.Site.Pages "Params.slug" . }}
 
         <div>
-          <a href="{{ .Params.url }}" class="box-link">
-            <img src="{{.Params.thumbnail}}" class="img-fluid" alt="{{.Params.thumbnailAlt}}">
-          </a>
-          <a href="{{ .Params.url }}">
-            <h2 class="heading-4">
-              {{ .Title }}
-            </h2>
-          </a>
+          {{ partial "img-description.html" . }}
         </div>
 
         {{ end }}
