--- a/layouts/pricing/list.html
+++ b/layouts/pricing/list.html
@@ -6,7 +6,7 @@
   <div class="container">
     {{ partial "breadcrumbs.html" . }}
   </div>
-      <main role="main" id="conteudo" class="internal-page image-list">
+      <main role="main" id="conteudo" class="internal-page">
         <section class="pricing-partial">
           <div class="container container--narrow">
             <div class="price">
