--- a/assets/stylesheets/components/_card.scss
+++ b/assets/stylesheets/components/_card.scss
@@ -58,7 +58,7 @@
   a {
     display: block;
 
-    text-decoration: none !important;
+    text-decoration: none !important;   /* stylelint-disable-line */
   }
 
   .category-title {
