--- a/layouts/partials/contact-form.html
+++ b/layouts/partials/contact-form.html
@@ -2,7 +2,7 @@
 <article class="contact-form">
   <div class="container container--narrow ">
     <h2 class="title-section">{{ i18n "getAQuote" }}</h2>
-    <form id="contato" name="Contact" action="/contato/sucesso/" method="POST" data-netlify="true">
+    <form id="contato" name="contact" action="/contato/sucesso/" method="POST" data-netlify="true">
       <div class="form-wrap">
         <div class="two-columns">
           <div class="form-group ">
