--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -463,6 +463,14 @@ textarea {
   color: my.palette('white');
 }
 
+.color-orange {
+  color: my.palette('orange');
+}
+
+.color-blue {
+  color: my.palette('blue');
+}
+
 .align-items--center {
   align-items: center;
 }
