--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
   <main role="main" id="conteudo" class="page">
+    {{ partial "transform-your-life.html" . }}
     {{ partial "global-citizen.html" . }}
     {{ partial "benefits.html" . }}
     <!-- {{ partial "destinations.html" . }}
