--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -1,5 +1,5 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ with $data.benefits }}
+{{ with $data.section.benefits }}
 
   <section class="benefits">
     <div class="container">
