--- a/layouts/partials/destinations.html
+++ b/layouts/partials/destinations.html
@@ -1,5 +1,5 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ with $data.destinations }}
+{{ with $data.section.destinations }}
 
   <section class="destinations">
     <div class="container">
