--- a/layouts/partials/high-school.html
+++ b/layouts/partials/high-school.html
@@ -1,5 +1,5 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ with $data.highSchool }}
+{{ with $data.section.highSchool }}
 
   <section class="image-with-text">
     <div class="container">
