--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -1,5 +1,5 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ with $data.testimonials }}
+{{ with $data.section.testimonials }}
 
   <section class="testimonials">
     <div class="container">
