fix: grammar errors

--- a/layouts/programs/single.html
+++ b/layouts/programs/single.html
@@ -37,7 +37,7 @@
           <table class="table--details table--wide">
             <thead>
               <tr>
-                <th colspan="2">Detalhes</th>
+                <th colspan="2">{{ i18n "details" | title }}</th>
               </tr>
             </thead>
             <tbody>
